--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ color: #a4a5a8;}
 .line-5{background-color: tomato;
 width: 10em;
 height: 2px;
-margin-left: 36em;
+margin-left: 29em;
 margin-top: 25px;
 margin-bottom: 20px;}
 
@@ -445,7 +445,7 @@ font-weight: 200;}
 height: 1.5px;
 width: 4em;
 background-color:  white;
-margin-left:35em;
+margin-left:30em;
 padding-right: 10em;
 margin-top: 2em;
 
@@ -453,13 +453,74 @@ margin-top: 2em;
  .banner-pre p{color: white;
   text-align: center;
 padding-top: 30px;
-padding-bottom: 30px;
+padding-bottom: 10px;
 font-family: 'myriad-pro' sans-serif;
 font-weight: 100;}
 
 .btn{color: white!important;
 text-align: center;
-margin-left: 36em;
+margin-left: 30em;
 border-color: white !important;
 padding: 12px 40px 15px 40px !important;}
 /*banner two end here*/
+
+/*CONATCT SATRT*/
+.c-head h4{text-align: center;
+font-size: 35px;
+text-transform: uppercase;
+font-family: 'Raleway';
+font-weight: 600;}
+.c-head p{text-align: center;
+padding-bottom: 50px;}
+.line-9{background-color: tomato;
+height: 3px;
+width: 7em;
+margin-left: 31em;
+margin-top: 25px;
+margin-bottom: 20px;
+}
+.contact-part{padding-top: 30px;
+padding-bottom: 37px;}
+
+.contact input{
+width: 90%;
+border: none;
+border-bottom: 1px solid grey;
+margin-left: 20px;
+margin-bottom: 40px;
+}
+.contact input:focus{
+  border: none;
+ border-bottom: 1px solid grey;
+  outline: none;
+}
+.box .input{
+  width: 80%;
+  height: 10em;
+}
+.box{margin-left: 30px;
+}
+.box .input::placeholder{
+  padding: 0px;
+  position: absolute;
+
+}
+.send .btn {background-color: tomato;
+  padding: 3px 30px 5px 30px !important;
+}
+/*CONTACT PART END HERE*/
+.ending{background-color:black;
+  padding-top: 20px;
+  padding-bottom: 5px
+}
+.iconbro ul li {list-style: none;
+display: inline-block;}
+.iconbro ul li a i{color: grey;
+  font-size: 20px;
+  margin-left: 2em;
+}
+.iconbro{margin-left:19em; }
+.copyright p{color: grey;
+text-align: center;
+font-size: 13px}
+/*END PART SRAT*/
